# ODrive

./: CMakeLists.txt
Firmware/MotorControl/: controller.cpp  controller.hpp
Firmware/communication/: ascii_protocol.cpp
